kubernetes/django-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app: django-app
spec:

  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app # Имя первого контейнера.
        image: sgkond/lesson-kuber-1 # Имя и тег образа контейнера.
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
