kubernetes/django-servise.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    env: prod
spec:
  selector:
    app: django-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
